inventory action handling - mode 5 support, for both left- and right-mouse painting. The border case where mouse slips and the client registers a mini-drag with just one slot needs testing - possibly the drags with just one slot are normally rejected.

--- a/todo.txt
+++ b/todo.txt
@@ -17,7 +17,7 @@ legend:
     ~ Mode 2 (numeric selection)
     ~ Mode 3
     - Mode 4 (throwing)
-    ! Mode 5 (painting)
+    * Mode 5 (painting)
     ~ Mode 6 (?)
     - Explicit update request 
   = Inventory Switching
