--- a/todo.txt
+++ b/todo.txt
@@ -13,7 +13,7 @@ legend:
   = Inventory Tracking - track changes in player's inventory based on SP_SetSlot, CP_WindowClick and SP_ConfirmTransaction
     + SP_SetSlot handling
     + Mode 0 (simple click)
-    - Mode 1 (shift-click)
+    * Mode 1 (shift-click)
     ~ Mode 2 (numeric selection)
     ~ Mode 3
     + Mode 4 (throwing)
