--- a/todo.txt
+++ b/todo.txt
@@ -1,17 +1,17 @@
 = general organization =
 
-* make a buildplan a separate struct
++ make a buildplan a separate struct
 * manage multiple buildplans instead of one global
-* move functions to create and manipulate buildplans to a separate module w/o any access to the global data or gamestate
++ move functions to create and manipulate buildplans to a separate module w/o any access to the global data or gamestate
 - introduce asynchronous packet queue
 
 = meta manipulations =
 
 - support more meta-oriented blocks
 - meta value mapping for rotation (for all blocks)
-- meta value mapping when flipping
-- meta value mapping when tilting
-- find a base material from stairs/slab etc. blocks
++ meta value mapping when flipping
+* meta value mapping when tilting (only y-tilting, i.e. rotation is supported)
++ find a base material from stairs/slab etc. blocks
 - replace should correctly handle material replacement for orientation-dependent blocks
 
 = build process =
@@ -24,23 +24,26 @@
   - no turning to target
   - extended reach
   - no need for supporting blocks
+- support placement for blocks that have a differing item ID in the inventory, e.g. doors, cauldrons
 
 = buildplan manipulation =
 
 - auto-supports for disconnected blocks
-- export to schematic
-- fix trim issue - does not handle x/z correctly
-- hollow-2D
++ export to schematic
++ fix trim issue - does not handle x/z correctly
++ hollow-2D
 
 = inventory handling =
 
-- fix inventory transfers for lava/water buckets
-- fix inventory transfers for the named blocks
++ fix inventory transfers for lava/water buckets (could not find any issue with buckets, but fixed other 2 bugs in the process)
++ fix inventory transfers for named blocks
 - handle failed transactions
 - autojunk/autostorage
+- proper handling of conditionally-stackable items, e.g. Written Books
 
 = in-world preview =
 
+- better preview/phantom block framework
 - optimize build preview for large builds
 - fix removal of the preview (maybe - refresh world by sending chunks)
 - mask/selection with preview
@@ -68,7 +71,7 @@
 
 = parametric builds =
 
-- better ring/circle algorithm
++ better ring/circle algorithm
 - ellipse, ellipsoid
 - spiral
 - checkerboard
